--- a/client.html
+++ b/client.html
@@ -32,9 +32,15 @@
             return null;
         }
         const token = encodeURIComponent("sS8O3gzqXfU/erD+/miNBvU/dBQANIMDXO93Kw94NUpfyZ5Al1J1lH+YTVpLkF9U")//getCookie('MXTOKEN')
-        const socket = new reconnectingWebsocket('ws://localhost:8080?uid=208&token=' + token);
+        const socket = new reconnectingWebsocket('ws://localhost:8080?uid=208&token=' + token, [], { maxReconnectionDelay: 20000, maxRetries: 5 });
         //const socket = new reconnectingWebsocket('wss://mxpush.mxfast.com/?uid=208&token=' + token);
-
+        function parseJson(str) {
+            try {
+                return JSON.parse(str)
+            } catch (e) {
+            }
+            return null
+        }
         // 连接打开时的事件处理
         socket.onopen = function (event) {
             console.log('Connection opened:', event);
@@ -44,6 +50,13 @@
         // 接收消息的事件处理
         socket.onmessage = function (event) {
             console.log('Message received:', event.data);
+            const item = parseJson(event.data)
+            if (item) {
+                const { r, id } = item
+                if (r) {
+                    socket.send(JSON.stringify({ rr: true, id, data: "123" }))
+                }
+            }
         };
         // 连接关闭时的事件处理
         socket.onclose = function (event) {
